syntax = "proto3";

option csharp_namespace = "UhlnocsServer";

package modelProto;

service ModelServiceProto {
  rpc AddModelConfiguration (ModelConfigurationRequest) returns (ModelEmptyMessage);

  rpc UpdateModelConfiguration (ModelConfigurationRequest) returns (ModelEmptyMessage);

  rpc DeleteModel (ModelIdRequest) returns (ModelEmptyMessage);

  rpc GetModelConfiguration (ModelIdRequest) returns (ModelConfigurationReply);

  rpc GetModelsConfigurations (ModelEmptyMessage) returns (ModelsConfigurationsReply);

  rpc UploadModelArchive (stream ArchivePartRequest) returns (ModelEmptyMessage);

  rpc DownloadModelArchive (ModelIdRequest) returns (stream ArchivePartReply);

  rpc GetParametersWithModels (ModelEmptyMessage) returns (ParametersWithModelsReply);

  rpc GetCharacteristicsWithModels (ModelEmptyMessage) returns (CharacteristicsWithModelsReply);
}

message ModelEmptyMessage {

}

message ModelIdRequest {
	string modelId = 1;
}

message ModelConfigurationRequest {
	string modelConfigurationJson = 1;
}

message ModelConfigurationReply {
	string modelConfigurationJson = 1;
	double performance = 2;
}

message ModelsConfigurationsReply {
	repeated ModelConfigurationReply modelsConfigurationsReplies = 1;
}

message ArchivePartReply {
	bytes data = 1;
	int32 bytesToRead = 2;
}

message ArchivePartRequest {
	bytes data = 1;
	int32 bytesToRead = 2;
	string modelId = 3;
}

message ParametersWithModelsReply {
	string parametersWithModelsJson = 1;
}

message CharacteristicsWithModelsReply {
	string characteristicsWithModelsJson = 1;
}